--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/kmargaritis">View on GitHub</a>
 
-          <h1 id="project_title">Kmargaritis.github.io</h1>
+          <h1 id="project_title">jsxm.github.io</h1>
           <h2 id="project_tagline">JSXM umbrella</h2>
 
         </header>
